service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-api
spec:
  selector:
    app: ping-pong-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
