traffic-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-traffic
  namespace: satsure
spec:
  podSelector:
    matchLabels:
      app: ping-pong-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: server
          app.kubernetes.io/instance: prometheus
          app.kubernetes.io/name: prometheus  # Allow traffic from Prometheus server
      namespaceSelector:
        matchLabels:
          name: vibhor-satsure-monitoring
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: grafana
          app.kubernetes.io/name: grafana  # Allow traffic from Grafana
      namespaceSelector:
        matchLabels:
          name: vibhor-satsure-monitoring
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: server
          app.kubernetes.io/instance: prometheus
          app.kubernetes.io/name: prometheus  # Allow traffic to Prometheus server
      namespaceSelector:
        matchLabels:
          name: vibhor-satsure-monitoring
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: grafana
          app.kubernetes.io/name: grafana  # Allow traffic to Grafana
      namespaceSelector:
        matchLabels:
          name: vibhor-satsure-monitoring
